--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,28 @@ async-generator==1.10
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.2.3
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 chess==1.4.0
+click==7.1.2
 cycler==0.10.0
+Cython==0.29.21
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+filelock==3.0.12
+Flask==1.1.2
+glob2==0.7
+idna==2.10
 ipykernel==5.4.3
 ipython==7.19.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
+itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.2
+joblib==1.0.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.11
@@ -36,13 +46,14 @@ nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
 numpy==1.19.5
-packaging==20.9
+packaging==20.8
 pandas==1.2.1
 pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.0
+pkg-resources==0.0.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.14
 ptyprocess==0.7.0
@@ -56,16 +67,24 @@ PyYAML==5.4.1
 pyzmq==22.0.2
 qtconsole==5.0.2
 QtPy==1.9.0
+regex==2020.11.13
+requests==2.25.1
+sacremoses==0.0.43
 scipy==1.6.0
 seaborn==0.11.1
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.2
 testpath==0.4.4
+tokenizers==0.9.4
 toml==0.10.2
 tornado==6.1
+tqdm==4.56.0
 traitlets==5.0.5
+typing-extensions==3.7.4.3
+urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==1.0.1
 wget==3.2
 widgetsnbextension==3.5.1
