--- a/website/package.json
+++ b/website/package.json
@@ -19,14 +19,22 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "chess.js": "^0.11.0",
+    "chessboardjsx": "^2.4.2",
+    "fs": "^0.0.1-security",
     "react": "^16.13.1",
     "react-async": "^10.0.1",
     "react-bootstrap": "^1.0.1",
+    "react-chess.js": "^1.3.1",
     "react-dom": "^16.13.1",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "3.4.1",
-    "url-loader": "^4.1.0",
-    "@material-ui/core": "4.11.3"
+    "react-simple-chessboard": "^1.1.0",
+    "url-loader": "^4.1.0"
   }
 }
